--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ logs/
 tb_logs/
 get_baostock_data.ipynb
 get_baostock_data.py
+train/
+tmp.csv
+_stable_baselines3_version
+*.zip
+*.png
+*.playground
